# PAD-Service-Software

./: .gitignore  CMakeLists.txt  PAD-Service  README.md  build_package.sh  composite_app.py  composite_third_app.py
PAD-BootManager/: CMakeLists.txt  README.md
PAD-BootManager/docs/: quickstart.md  recovery_procedures.md
PAD-BootManager/src/: bootloader_handler.cpp  bootloader_handler.hpp  dfu_handler.cpp  dfu_handler.hpp  main.cpp
PAD-CoreBuilder/: README.md
PAD-CoreBuilder/docs/: INSTALL.md  adding_new_mcus.md  faq.md  peripheral_templates.md  pin_mapping.md  quickstart.md  troubleshooting.md
PAD-Debugger/: CMakeLists.txt  README.md
PAD-Debugger/docs/: INSTALL.md  memory_watchpoints.md  quickstart.md  swo_tracing.md  task_timeline.md
PAD-Debugger/src/: debugger_core.hpp  logger.hpp  main.cpp  rtos_integrator.hpp
PAD-Flasher/: CMakeLists.txt  README.md
PAD-Flasher/docs/: batch_mode_guide.md  install.md  protocol_specs.md  quickstart.md  troubleshooting.md
PAD-Flasher/src/: main.cpp
PAD-Flasher/src/protocols/: uart.cpp  uart.h
PAD-Health/: CMakeLists.txt  README.md
PAD-Health/docs/: index.md  installation.md  quickstart.md
PAD-LogView/: CMakeLists.txt
PAD-MemGuard/docs/: troubleshooting.md  user-guide.md
PAD-Scope/: CMakeLists.txt
PAD-Scope/docs/: installation.md  trigger_modes.md
PAD-Scope/src/: main.cpp
PAD-Trace/docs/: installation.md  troubleshooting.md  user-guide.md
include/: common_types.h  pad_interfaces.h
lib/: CMakeLists.txt  pad_common.c  pad_config.c  pad_crypto.c  pad_network.c  pad_serial.c
monitoring/PAD-Health/: CMakeLists.txt
monitoring/PAD-Health/docs/: troubleshooting.md  user-guide.md
monitoring/PAD-Health/src/: main.cpp
monitoring/PAD-LogView/docs/: index.md  installation.md  troubleshooting.md  user-guide.md
monitoring/PAD-MemGuard/: CMakeLists.txt
monitoring/PAD-MemGuard/docs/: index.md  installation.md
monitoring/PAD-Scope/: README.md
monitoring/PAD-Scope/docs/: export_formats.md  index.md  install.md  protocol_decoding.md  quickstart.md  troubleshooting.md  user-guide.md
monitoring/PAD-Trace/: CMakeLists.txt
monitoring/PAD-Trace/docs/: index.md
pad-corebuilder/: CMakeLists.txt  README.md
pad-corebuilder/docs/core-builder/: adding_new_mcu.md  peripheral_templates.md  pin_mapping_guide.md
pad-corebuilder/src/c/: main.c
pad-corebuilder/src/cpp/: main.cpp
pad-corebuilder/src/python/: main.py
pad-flasher/: CMakeLists.txt  INSTALL.md  LICENSE  SETUP.md
pad-flasher/docs/pad-flasher/: batch-mode-guide.md  protocol-specs.md  quickstart.md
pad-flasher/src/asm/: flasher.asm
pad-flasher/src/c/: main.c
pad-flasher/src/cpp/: main.cpp
pad-flasher/src/python/: main.py
second_implementation/: CMakeLists.txt  README.md  build_package.sh
second_implementation/src/asm/: CMakeLists.txt  helper.c  main.asm
second_implementation/src/c/: main.c
second_implementation/src/cpp/: main.cpp
second_implementation/src/python/: sdl_app.py
src/asm/: helper.c  main.asm
src/c/: CMakeLists.txt  main.c
src/cpp/: CMakeLists.txt  main.cpp
third_implementation/: CMakeLists.txt  README.md  build_package.sh
third_implementation/build_test/: MultiLanguageSDLProject-1.0.0-Linux.sh  cpp_third_app
third_implementation/build_test/_CPack_Packages/Linux/DEB/MultiLanguageSDLProject-1.0.0-Linux/: control  md5sums
third_implementation/src/asm/: main.asm  sdl_helper.c
third_implementation/src/c/: main.c
third_implementation/src/cpp/: main.cpp
third_implementation/src/python/: main.py
